--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "bot.js",
   "scripts": {
     "lint": "eslint",
-    "update_slash": "update_app_slash.js",
+    "update_slash": "node update_app_slash.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
