--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "is-fullwidth-code-point": "^3.0.0",
     "is-glob": "^4.0.1",
     "isexe": "^2.0.0",
+    "jimp": "^0.16.1",
     "js-tokens": "^4.0.0",
     "js-yaml": "^3.14.1",
     "json-schema-traverse": "^0.4.1",
@@ -99,6 +100,7 @@
     "resolve-from": "^4.0.0",
     "rimraf": "^3.0.2",
     "semver": "^7.3.5",
+    "sharp": "^0.29.0",
     "shebang-command": "^2.0.0",
     "shebang-regex": "^3.0.0",
     "slice-ansi": "^4.0.0",
